[package]
name = "bf"
version = "0.2.5"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An optimizing Brainfuck implementation framework"
repository = "https://github.com/tov/bf-rs"
homepage = "https://github.com/tov/bf-rs"
documentation = "http://tov.github.io/bf-rs/"
readme = "README.md"
license = "MIT"
keywords = ["brainfuck", "interpreters", "compilers", "jit", "x64"]

[features]

# Enables native x64 JIT; requires nightly Rust
jit = ["dynasmrt", "dynasm"]

[dependencies]
clap = "2.24"

dynasmrt = { version = "0.1", optional = true }
dynasm = { version = "0.1", optional = true }

clippy = { version = "0", optional = true }
