[package]
name = "bf"
version = "0.3.4"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An optimizing Brainfuck implementation framework"
repository = "https://github.com/tov/bf-rs"
homepage = "https://github.com/tov/bf-rs"
documentation = "http://tov.github.io/bf-rs/"
readme = "README.md"
license = "MIT"
keywords = ["brainfuck", "interpreters", "compilers", "jit", "x64"]

[badges]
travis-ci = { repository = "tov/bf-rs" }

[features]

# Enables native x64 JIT; requires nightly Rust
jit = ["dynasmrt", "dynasm"]

# Use `u32` for counts instead of usize.
u32count = []

# Use `u16` for counts instead of usize.
u16count = []

[dependencies]
clap = "2.24"

dynasmrt = { version = "0.1", optional = true }
dynasm = { version = "0.1", optional = true }

clippy = { version = "0", optional = true }
